--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,109 @@ body {
     font-family: "Roboto", sans-serif;
     color:#434455;
     background-color: #fff;
+    
+}
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+p {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 a {text-decoration: none;}
 
-ul {list-style-type: none;}
+ul {
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+img {
+    display: block;
+}
+
+.container {
+    max-width: 1440px;
+    box-sizing: border-box;
+    }
+
+    .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+display: flex; 
+align-items: center;
+justify-content: space-between;
+    }
+
+.container-header {
+display: flex;
+direction: row; 
+    padding: 24px 0;
+    justify-content: center;
+    margin: 0 auto;
+    width: 1158px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+
+.nav-header {
+display: flex;
+direction: row;
+align-items: center;
+margin-right: auto;
+}
+
+.container-title {
+    background: #2e2f42;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    padding: 188px 478px;
+} 
+
+.container-features {
+    width: 1158px;
+    padding: 120px 15px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.container-team {
+    background-color: #f4f4fd;
+    width: 1158px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.container-portfolio {
+    width: 1158px;
+    padding: 120px 15px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.container-footer {
+    background-color: #2e2f42;
+}
 
 /*------Header--------*/
+
+.menu-list {
+    margin-left: 76px;
+    display: flex;
+    direction: row;
+    gap: 40px
+} 
 
 .menu-item {
 color: #2e2f42;
@@ -20,6 +116,9 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+align-items: center;
+padding-top: 24px;
+padding-bottom: 24px;
     }
 
 .menu-link:hover, .menu-link:focus {
@@ -27,6 +126,7 @@ letter-spacing: 0.02em;
 }
 
 .logo {
+    
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -34,6 +134,7 @@ letter-spacing: 0.02em;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+
 }
 
 .logo-colored {color: #2e2f42;}
@@ -50,6 +151,16 @@ color: #404bbf;
     font-style: normal; 
 }
 
+.menu-address {
+    justify-content: flex-end;
+    display: flex;
+    direction: row;
+    gap: 40px;
+    padding: 24px 0;
+    margin-left: 332px;
+    align-items: center;
+}
+
 .address-link {
     font-weight: 400;
     font-size: 16px;
@@ -62,7 +173,6 @@ color: #404bbf;
 .address-link:hover, .address-link:focus {color: #404bbf;}
 
 /*----Section 1----*/
-
 .section-title {background-color: #2e2f42;}
 
 .main-title {
@@ -72,6 +182,9 @@ line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
+width: 496px;
+margin: 0 auto;
+padding-bottom: 48px; 
 }
 
 .title-btn {
@@ -82,7 +195,13 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 cursor: pointer;
 color: #fff;
+border: none;
+border-radius: 4px;
+width: 169px;
+padding-top: 16px;
+padding-bottom: 16px;
 background-color: #4D5AE5;
+
 }
 
 .title-btn:hover, .title-btn:focus {
@@ -101,6 +220,15 @@ color: #2e2f42;
 text-transform: capitalize;
 }
 
+.features-list {
+  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.features-item {
+    width: calc((100% - 3 * 24px) / 4);
+}
 .features-subtitle {
     font-weight: 500;
     font-size: 20px;
@@ -120,8 +248,21 @@ letter-spacing: 0.02em;
 .section-team {
 background-color: #F4F4FD;
 }
- 
-.first-member-item {background-color: #FFFFFF;} 
+
+.team-title {
+    padding-bottom: 72px;
+}
+
+.team-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;   
+}
+
+.team-item {
+    background-color: #FFFFFF;
+    width: calc((100% - 3 * 24px) / 4);
+}
 
 .team-subtitle {
     font-weight: 500;
@@ -141,6 +282,26 @@ text-align: center;
 }
 
 /*----Section 4 Our Portfolio----*/
+
+.portfolio-title {
+    padding-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+    
+}
+
+.portfolio-item {
+    width: calc((100% - 2 * 24px) / 3);   
+}
+
+.portfolio-card-list {
+    padding: 32px 16px;
+    }
 
 .portfolio-subtitle {
     font-weight: 500;
