--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,16 @@ text-transform: capitalize;
 }
 
 .visually-hidden {
-
+position: absolute;
+width: 1px;
+height: 1px;
+margin: -1;
+border: 0;
+padding: 0;
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow: hidden;
 }
 
 .features-list {
