--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,7 @@ display: flex;
 flex-direction: row; 
     padding: 24px 0;
     justify-content: center;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding: 0 15px;
 }
 
 .nav-header {
@@ -210,11 +209,10 @@ text-transform: capitalize;
 position: absolute;
 width: 1px;
 height: 1px;
-margin: -1;
 border: 0;
 padding: 0;
 white-space: nowrap;
-clip-path: inset(100%);
+clip-path: inset(50%);
 clip: rect(0 0 0 0);
 overflow: hidden;
 }
@@ -326,11 +324,12 @@ letter-spacing: 0.02em;
 }
 
 .portfolio-item {
-    width: calc((100% - 2 * 24px) / 3);   
+    width: calc((100% - 48px) / 3);   
 }
 
 .portfolio-card-list {
     padding: 32px 16px;
+    border: 1px solid #e7e9fc; 
     }
 
 .portfolio-images {
