--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,7 @@ letter-spacing: 0.02em;
 .portfolio-card-list {
     padding: 32px 16px;
     border: 1px solid #e7e9fc; 
+    border-top: none; 
     }
 
 .portfolio-images {
@@ -378,8 +379,13 @@ letter-spacing: 0.02em;
     max-width: 264px;
 }
 
+.logo-footer {
+    display: inline-block; 
+    margin-bottom: 16px;     
+}
+
 .logo-footer-colored {
     color: #f4f4fd;
     display: inline-block; 
-    margin-bottom: 16px; 
+    margin-bottom: 16px;  
 }
