--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,7 @@ white-space: nowrap;
 clip-path: inset(100%);
 clip: rect(0 0 0 0);
 overflow: hidden;
+margin-bottom: 8px;
 }
 
 .features-list {
@@ -313,7 +314,7 @@ letter-spacing: 0.02em;
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 48px 24px;
+    gap: 24px;
     border: 1px solid #e7e9fc;
     
 }
