--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,6 @@ img {
 /*------Header--------*/
 
 .header {
-    padding-top: 24px;
-    padding-bottom: 24px;
 display: flex; 
 align-items: center;
 justify-content: space-between;
@@ -46,11 +44,8 @@ border-bottom: 1px solid #e7e9fc
     }
 
 .container-header {
-display: flex;
-flex-direction: row; 
-    padding: 24px 0;
-    justify-content: center;
-    padding: 0 15px;
+display: flex; 
+align-items: center;
 }
 
 .nav-header {
@@ -76,7 +71,7 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-align-items: center;
+display: block;
 padding-top: 24px;
 padding-bottom: 24px;
     }
@@ -112,13 +107,8 @@ color: #404bbf;
 }
 
 .menu-address {
-    justify-content: flex-end;
     display: flex;
-    direction: row;
     gap: 40px;
-    padding: 24px 0;
-    margin-left: 332px;
-    align-items: center;
 }
 
 .address-link {
@@ -370,6 +360,4 @@ letter-spacing: 0.02em;
 
 .logo-footer-colored {
     color: #f4f4fd;
-    display: inline-block; 
-    margin-bottom: 16px;  
 }
